--- a/templates/contact.html
+++ b/templates/contact.html
@@ -95,8 +95,8 @@
     <section class="contact-section">
         <div class="contact-info">
             <div class="contact-details">
-                <p>Email: <a href="mailto:arshdeepsanghera2002@gmail.com">arshdeepsanghera2002@gmail.com</a></p>
-                <p>Phone: <a href="tel:+919855352898">9855352898</a></p>
+                <p>Email: <a href="mailto:arshspace.tech@gmail.com">arshspace.tech@gmail.com</a></p>
+                <p>Phone: <a href="tel:+919876543210">9876543210</a></p>
                 <p>Address: Punjabi University, Patiala</p><br /><br>
                 <h2 class="impressive-text">We are dedicated to providing exceptional service to our clients and customers.</h2><br>
                 <h2 class="impressive-text">Feel free to reach out to us with any questions, comments, or feedback. We look forward to hearing from you!</h2>
