--- a/templates/help.html
+++ b/templates/help.html
@@ -49,7 +49,7 @@
     <main>
         <section class="section" id="contact">
             <h2>Contact Information</h2>
-            <p>Please feel free to reach out to us via phone at <strong>9855352898</strong> or email at <strong><a href="mailto:arshdeepsanghera2002@gmail.com">arshdeepsanghera2002@gmail.com</a></strong>. Our customer support team is available 24/7 to assist you.</p>
+            <p>Please feel free to reach out to us via phone at <strong>9876543210</strong> or email at <strong><a href="mailto:arshspace.tech@gmail.com">arshspace.tech@gmail.com</a></strong>. Our customer support team is available 24/7 to assist you.</p>
         </section>
         <section class="section" id="shipping">
             <h2>Order Placement Procedure</h2>
